FullQa New/src/FinancialForce ClickLink/objects/IntegrationRuleLogLineItem__c.object
<CustomObject>
    <customHelpPage>helpintegrationruleloglineitem</customHelpPage>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IntegrationRuleLog__c</fullName>
        <label>ClickLink Log</label>
        <referenceTo>IntegrationRuleLog__c</referenceTo>
        <relationshipLabel>ClickLink Log Line Items</relationshipLabel>
        <relationshipName>IntegrationRuleLogLineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RelatedSourceLineItemTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Source Line Item Test</label>
        <referenceTo>IntegrationRuleSourceLineItemTest__c</referenceTo>
        <relationshipLabel>Create Target Line Log</relationshipLabel>
        <relationshipName>IntegrationRuleLogLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedSourceTest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Source Test</label>
        <referenceTo>IntegrationRuleSourceTest__c</referenceTo>
        <relationshipLabel>Create Target Log</relationshipLabel>
        <relationshipName>IntegrationRuleLogLineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ClickLink Log Line Item</label>
    <nameField>
        <displayFormat>SOLOGLINE-{00000000}</displayFormat>
        <label>Log Line Item ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Log Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>